--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </li>
                 <li><a href="#">Mes bulletins</a></li>
                 <li><a href="#" id="absence-button">Absences</a></li>
+                <li><a href="#" id="edt-button">Emploi du temps</a></li>
                 <li class="logout"><a href="#" id="logout-button">Déconnexion</a></li>
             </ul>
         </aside>
