--- a/index.html
+++ b/index.html
@@ -306,6 +306,13 @@
                 <p><strong>Nombre total d'absences:</strong> 0</p>
                 <p><strong>Durée totale des absences:</strong> 0:0</p>
             </section>
+            <section id="edt-section" style="display: none;">
+    <h2>Emploi du temps</h2>
+    <div class="edt-container">
+        <!-- Ici on pourra afficher ton EDT -->
+        <iframe src="edt.html" class="edt-frame"></iframe>
+    </div>
+</section>
         </main>
     </div>
 
