--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
 
     <div id="content" style="display: none;">
         <header class="header">
-            <div class="logo">
-                <img src="logo_ensiiie.png" alt="Logo ENSIIE" class="logo-header">
-            </div>
-        </header>
+    <div class="logo">
+        <img src="logo_ensiiie.png" alt="Logo ENSIIE" class="logo-header">
+    </div>
+
+    <!-- Bouton menu hamburger -->
+    <div class="menu-toggle" id="menu-toggle">
+        ☰
+    </div>
+</header>
 
         <aside class="sidebar">
             <ul class="menu">
