--- a/edt.html
+++ b/edt.html
@@ -6,36 +6,69 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
+            background: #f9f9f9;
         }
+
+        header {
+            background: #f5821f;
+            color: white;
+            padding: 15px;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+        }
+
         h3 {
             text-align: center;
-            margin-bottom: 20px;
+            margin: 15px 0;
+            color: #333;
         }
+
         table {
-            width: 100%;
+            width: 95%;
+            margin: auto;
             border-collapse: collapse;
             text-align: center;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            background: white;
         }
+
         th, td {
-            border: 1px solid #ccc;
-            padding: 8px;
+            border: 1px solid #e0e0e0;
+            padding: 12px;
             min-width: 120px;
         }
+
         th {
-            background: #e69533;
+            background: #f5821f;
             color: white;
+            font-size: 14px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
+
+        td {
+            height: 60px;
+            font-size: 13px;
+        }
+
         .cours {
-            background: #90ee90;
+            background: #4caf50;
+            color: white;
             font-weight: bold;
+            border-radius: 6px;
+            padding: 8px;
         }
+
         .empty {
-            background: #f9f9f9;
+            background: #fafafa;
         }
     </style>
 </head>
 <body>
+    <header>ensIIE - Emploi du temps</header>
     <h3>Semaine du 1 au 7 Septembre 2025</h3>
     <table>
         <tr>
