--- a/edt.html
+++ b/edt.html
@@ -83,24 +83,20 @@
             <td>08h-09h</td>
             <td class="empty"></td>
             <td class="empty"></td>
-            <td class="empty"></td>
-            <td class="empty"></td>
+            <td rowspan="9" class="cours">Recherche opérationnelle<br>(9h-18h)</td>
+            <td rowspan="9" class="cours">Programmation avancée<br>(9h-18h)</td>
             <td class="empty"></td>
         </tr>
         <tr>
             <td>09h-10h</td>
             <td class="cours">Conférences</td>
             <td class="cours">Processus stochastique</td>
-            <td class="cours">Recherche opérationnelle</td>
-            <td class="empty"></td>
             <td class="cours">Programmation avancée</td>
         </tr>
         <tr>
             <td>10h-11h</td>
             <td class="cours">Analyse de données</td>
             <td class="cours">Processus stochastique</td>
-            <td class="cours">Recherche opérationnelle</td>
-            <td class="empty"></td>
             <td class="cours">Programmation avancée</td>
         </tr>
         <tr>
@@ -108,13 +104,9 @@
             <td class="cours">Analyse de données</td>
             <td class="empty"></td>
             <td class="empty"></td>
-            <td class="empty"></td>
-            <td class="empty"></td>
         </tr>
         <tr>
             <td>12h-13h</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
             <td class="empty"></td>
             <td class="empty"></td>
             <td class="empty"></td>
@@ -124,14 +116,10 @@
             <td class="empty"></td>
             <td class="empty"></td>
             <td class="empty"></td>
-            <td class="empty"></td>
-            <td class="empty"></td>
         </tr>
         <tr>
             <td>14h-15h</td>
             <td class="cours">Analyse de données</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
             <td class="empty"></td>
             <td class="empty"></td>
         </tr>
@@ -140,21 +128,15 @@
             <td class="cours">Analyse de données</td>
             <td class="empty"></td>
             <td class="empty"></td>
-            <td class="empty"></td>
-            <td class="empty"></td>
         </tr>
         <tr>
             <td>16h-17h</td>
             <td class="cours">Analyse de données</td>
             <td class="empty"></td>
             <td class="empty"></td>
-            <td class="empty"></td>
-            <td class="empty"></td>
         </tr>
         <tr>
             <td>17h-18h</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
             <td class="empty"></td>
             <td class="empty"></td>
             <td class="empty"></td>
