--- a/edt.html
+++ b/edt.html
@@ -80,64 +80,38 @@
             <th>Vendredi 05/09</th>
         </tr>
         <tr>
-            <td>08h-09h</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
-            <td rowspan="9" class="cours">Recherche opérationnelle<br>(9h-18h)</td>
-            <td rowspan="9" class="cours">Programmation avancée<br>(9h-18h)</td>
-            <td class="empty"></td>
-        </tr>
-        <tr>
-            <td>09h-10h</td>
+            <td>09h-11h</td>
             <td class="cours">Conférences</td>
             <td class="cours">Processus stochastique</td>
+            <td rowspan="2" class="cours">Recherche opérationnelle</td>
+            <td rowspan="2" class="cours">Analyse de données</td>
             <td class="cours">Programmation avancée</td>
         </tr>
         <tr>
-            <td>10h-11h</td>
+            <td>11h-13h</td>
             <td class="cours">Analyse de données</td>
             <td class="cours">Processus stochastique</td>
             <td class="cours">Programmation avancée</td>
-        </tr>
-        <tr>
-            <td>11h-12h</td>
-            <td class="cours">Analyse de données</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
-        </tr>
-        <tr>
-            <td>12h-13h</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
-            <td class="empty"></td>
         </tr>
         <tr>
             <td>13h-14h</td>
             <td class="empty"></td>
             <td class="empty"></td>
             <td class="empty"></td>
+            <td class="empty"></td>
+            <td class="empty"></td>
         </tr>
         <tr>
-            <td>14h-15h</td>
+            <td>14h-16h</td>
             <td class="cours">Analyse de données</td>
             <td class="empty"></td>
+            <td rowspan="2" class="cours">Méthodes de régression</td>
+            <td rowspan="2" class="cours">Créativité & Innovation</td>
             <td class="empty"></td>
         </tr>
         <tr>
-            <td>15h-16h</td>
+            <td>16h-18h</td>
             <td class="cours">Analyse de données</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
-        </tr>
-        <tr>
-            <td>16h-17h</td>
-            <td class="cours">Analyse de données</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
-        </tr>
-        <tr>
-            <td>17h-18h</td>
-            <td class="empty"></td>
             <td class="empty"></td>
             <td class="empty"></td>
         </tr>
