--- a/edt.html
+++ b/edt.html
@@ -65,26 +65,34 @@
         .empty {
             background: #fafafa;
         }
+
+        .integration {
+            background: #2196f3;
+            color: white;
+            font-weight: bold;
+            border-radius: 6px;
+            padding: 8px;
+        }
     </style>
 </head>
 <body>
     <header>ensIIE - Emploi du temps</header>
-    <h3>Semaine du 1 au 7 Septembre 2025</h3>
+    <h3>Semaine du 8 au 14 Septembre 2025</h3>
     <table>
         <tr>
             <th>Heure</th>
-            <th>Lundi 01/09</th>
-            <th>Mardi 02/09</th>
-            <th>Mercredi 03/09</th>
-            <th>Jeudi 04/09</th>
-            <th>Vendredi 05/09</th>
+            <th>Lundi 08/09</th>
+            <th>Mardi 09/09</th>
+            <th>Mercredi 10/09</th>
+            <th>Jeudi 11/09</th>
+            <th>Vendredi 12/09</th>
         </tr>
         <tr>
             <td>09h-11h</td>
             <td class="cours">Conférences</td>
             <td class="cours">Processus stochastique</td>
             <td rowspan="2" class="cours">Recherche opérationnelle</td>
-            <td rowspan="2" class="cours">Analyse de données</td>
+            <td rowspan="5" class="integration">Intégration</td>
             <td class="cours">Programmation avancée</td>
         </tr>
         <tr>
@@ -99,14 +107,12 @@
             <td class="empty"></td>
             <td class="empty"></td>
             <td class="empty"></td>
-            <td class="empty"></td>
         </tr>
         <tr>
             <td>14h-16h</td>
             <td class="cours">Analyse de données</td>
             <td class="empty"></td>
             <td rowspan="2" class="cours">Méthodes de régression</td>
-            <td rowspan="2" class="cours">Créativité & Innovation</td>
             <td class="empty"></td>
         </tr>
         <tr>
@@ -118,3 +124,4 @@
     </table>
 </body>
 </html>
+
