--- a/edt.html
+++ b/edt.html
@@ -1,127 +1,109 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Emploi du temps</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f9f9f9;
-        }
-
-        header {
-            background: #f5821f;
-            color: white;
-            padding: 15px;
-            font-size: 18px;
-            font-weight: bold;
-            text-align: center;
-        }
-
-        h3 {
-            text-align: center;
-            margin: 15px 0;
-            color: #333;
-        }
-
-        table {
-            width: 95%;
-            margin: auto;
-            border-collapse: collapse;
-            text-align: center;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-            background: white;
-        }
-
-        th, td {
-            border: 1px solid #e0e0e0;
-            padding: 12px;
-            min-width: 120px;
-        }
-
-        th {
-            background: #f5821f;
-            color: white;
-            font-size: 14px;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        td {
-            height: 60px;
-            font-size: 13px;
-        }
-
-        .cours {
-            background: #4caf50;
-            color: white;
-            font-weight: bold;
-            border-radius: 6px;
-            padding: 8px;
-        }
-
-        .empty {
-            background: #fafafa;
-        }
-
-        .integration {
-            background: #2196f3;
-            color: white;
-            font-weight: bold;
-            border-radius: 6px;
-            padding: 8px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Emploi du temps</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f9f9f9;
+    }
+    header {
+      background: #f5821f;
+      color: white;
+      padding: 15px;
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+    }
+    table {
+      width: 95%;
+      margin: 20px auto;
+      border-collapse: collapse;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      background: white;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 10px;
+      min-width: 120px;
+    }
+    th {
+      background: #f5821f;
+      color: white;
+      font-size: 14px;
+    }
+    .cours {
+      background: #4caf50;
+      color: white;
+      font-weight: bold;
+      border-radius: 6px;
+      padding: 6px;
+    }
+    .integration {
+      background: #2196f3;
+      color: white;
+      font-weight: bold;
+      border-radius: 6px;
+      padding: 6px;
+    }
+    .gestion {
+      background: #9c27b0;
+      color: white;
+      font-weight: bold;
+      border-radius: 6px;
+      padding: 6px;
+    }
+  </style>
 </head>
 <body>
-    <header>ensIIE - Emploi du temps</header>
-    <h3>Semaine du 8 au 14 Septembre 2025</h3>
-    <table>
-        <tr>
-            <th>Heure</th>
-            <th>Lundi 08/09</th>
-            <th>Mardi 09/09</th>
-            <th>Mercredi 10/09</th>
-            <th>Jeudi 11/09</th>
-            <th>Vendredi 12/09</th>
-        </tr>
-        <tr>
-            <td>09h-11h</td>
-            <td class="cours">Conférences</td>
-            <td class="cours">Processus stochastique</td>
-            <td rowspan="2" class="cours">Recherche opérationnelle</td>
-            <td rowspan="5" class="integration">Intégration</td>
-            <td class="cours">Programmation avancée</td>
-        </tr>
-        <tr>
-            <td>11h-13h</td>
-            <td class="cours">Analyse de données</td>
-            <td class="cours">Processus stochastique</td>
-            <td class="cours">Programmation avancée</td>
-        </tr>
-        <tr>
-            <td>13h-14h</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
-            <td class="empty"></td>
-            <td class="empty"></td>
-        </tr>
-        <tr>
-            <td>14h-16h</td>
-            <td class="cours">Analyse de données</td>
-            <td class="empty"></td>
-            <td rowspan="2" class="cours">Méthodes de régression</td>
-            <td class="empty"></td>
-        </tr>
-        <tr>
-            <td>16h-18h</td>
-            <td class="cours">Analyse de données</td>
-            <td class="empty"></td>
-            <td class="empty"></td>
-        </tr>
-    </table>
+  <header>ensIIE - Emploi du temps</header>
+  <table>
+    <tr>
+      <th>Heure</th>
+      <th>Lundi</th>
+      <th>Mardi</th>
+      <th>Mercredi</th>
+      <th>Jeudi</th>
+      <th>Vendredi</th>
+    </tr>
+    <tr>
+      <td>09h-11h</td>
+      <td class="cours">Conférences</td>
+      <td class="cours">Processus stochastique</td>
+      <td rowspan="2" class="cours">Recherche opérationnelle</td>
+      <td rowspan="5" class="integration">Intégration</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>11h-13h</td>
+      <td class="cours">Analyse de données</td>
+      <td class="cours">Processus stochastique</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>13h-14h</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>14h-16h</td>
+      <td class="cours">Analyse de données</td>
+      <td></td>
+      <td rowspan="2" class="cours">Méthodes de régression</td>
+      <td rowspan="2" class="gestion">Gestion, Économie & Droit</td>
+    </tr>
+    <tr>
+      <td>16h-18h</td>
+      <td class="cours">Analyse de données</td>
+      <td></td>
+    </tr>
+  </table>
 </body>
 </html>
+
 
