--- a/index.html
+++ b/index.html
@@ -318,6 +318,16 @@
         <iframe src="edt.html" class="edt-frame"></iframe>
     </div>
 </section>
+            <!-- Section Bulletins -->
+<section id="bulletins-section" style="display: none;">
+    <h2>Mes bulletins</h2>
+    <p>Téléchargez vos bulletins :</p>
+    <div class="bulletins-container">
+        <a href="bulletin_semestre1.pdf" download class="bulletin-link">📄 BULLETIN SEMESTRE 1</a>
+        <a href="bulletin_semestre2.pdf" download class="bulletin-link">📄 BULLETIN SEMESTRE 2</a>
+    </div>
+</section>
+
         </main>
     </div>
 
