--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="#notes-annees-precedentes">Notes aux épreuves années précédentes</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Mes bulletins</a></li>
+                <li><a href="#" id="bulletins-button">Mes bulletins</a></li>
                 <li><a href="#" id="absence-button">Absences</a></li>
                 <li><a href="#" id="edt-button">Emploi du temps</a></li>
                 <li class="logout"><a href="#" id="logout-button">Déconnexion</a></li>
