--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
     <h2>Mes bulletins</h2>
     <p>Téléchargez vos bulletins :</p>
     <div class="bulletins-container">
-        <a href="bulletin_semestre1.pdf" download class="bulletin-link">📄 BULLETIN SEMESTRE 1</a>
-        <a href="bulletin_semestre2.pdf" download class="bulletin-link">📄 BULLETIN SEMESTRE 2</a>
-    </div>
+    <iframe src="bulletin_semestre1.pdf" width="100%" height="600px"></iframe>
+    <iframe src="bulletin_semestre2.pdf" width="100%" height="600px"></iframe>
+</div>
 </section>
 
         </main>
