--- a/edt.html
+++ b/edt.html
@@ -74,17 +74,19 @@
       <td class="cours">Conférences</td>
       <td class="cours">Processus stochastique</td>
       <td rowspan="2" class="cours">Recherche opérationnelle</td>
-      <td rowspan="5" class="integration">Intégration</td>
+      <td></td>
       <td></td>
     </tr>
     <tr>
       <td>11h-13h</td>
       <td class="cours">Analyse de données</td>
       <td class="cours">Processus stochastique</td>
+      <td class="cours">Programmation impérative</td>
       <td></td>
     </tr>
     <tr>
       <td>13h-14h</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -95,15 +97,15 @@
       <td class="cours">Analyse de données</td>
       <td></td>
       <td rowspan="2" class="cours">Méthodes de régression</td>
+      <td class="cours">Recherche opérationnelle (cours)</td>
       <td rowspan="2" class="gestion">Gestion, Économie & Droit</td>
     </tr>
     <tr>
       <td>16h-18h</td>
       <td class="cours">Analyse de données</td>
       <td></td>
+      <td class="cours">Recherche opérationnelle (TD)</td>
     </tr>
   </table>
 </body>
 </html>
-
-
