--- a/edt.html
+++ b/edt.html
@@ -96,7 +96,7 @@
       <td>14h-16h</td>
       <td class="cours">Analyse de données</td>
       <td></td>
-      <td rowspan="2" class="cours">Méthodes de régression</td>
+      <td class="cours">Méthodes de régression</td>
       <td class="cours">Recherche opérationnelle (cours)</td>
       <td rowspan="2" class="gestion">Gestion, Économie & Droit</td>
     </tr>
@@ -104,6 +104,7 @@
       <td>16h-18h</td>
       <td class="cours">Analyse de données</td>
       <td></td>
+      <td></td> <!-- mercredi vide -->
       <td class="cours">Recherche opérationnelle (TD)</td>
     </tr>
   </table>
