--- a/edt.html
+++ b/edt.html
@@ -12,49 +12,49 @@
     header {
       background: #f5821f;
       color: white;
-      padding: 15px;
-      font-size: 18px;
+      padding: 20px;
+      font-size: 20px;
       font-weight: bold;
       text-align: center;
     }
     table {
       width: 95%;
-      margin: 20px auto;
+      margin: 30px auto;
       border-collapse: collapse;
       text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 3px 10px rgba(0,0,0,0.15);
       background: white;
+      font-size: 15px;
     }
     th, td {
       border: 1px solid #ddd;
-      padding: 10px;
-      min-width: 120px;
+      padding: 20px; /* plus grand padding */
+      min-width: 130px;
+      min-height: 60px; /* hauteur minimum pour agrandir les cases */
     }
     th {
       background: #f5821f;
       color: white;
-      font-size: 14px;
+      font-size: 16px;
+    }
+    .cours, .integration, .gestion {
+      font-weight: bold;
+      border-radius: 6px;
+      padding: 10px;
+      display: inline-block;
+      width: 100%;
     }
     .cours {
       background: #4caf50;
       color: white;
-      font-weight: bold;
-      border-radius: 6px;
-      padding: 6px;
     }
     .integration {
       background: #2196f3;
       color: white;
-      font-weight: bold;
-      border-radius: 6px;
-      padding: 6px;
     }
     .gestion {
       background: #9c27b0;
       color: white;
-      font-weight: bold;
-      border-radius: 6px;
-      padding: 6px;
     }
   </style>
 </head>
@@ -75,7 +75,7 @@
       <td class="cours">Processus stochastique</td>
       <td rowspan="2" class="cours">Recherche opérationnelle</td>
       <td></td>
-      <td></td>
+      <td class="cours">Programmation avancée</td>
     </tr>
     <tr>
       <td>11h-13h</td>
@@ -104,9 +104,10 @@
       <td>16h-18h</td>
       <td class="cours">Analyse de données</td>
       <td></td>
-      <td></td> <!-- mercredi vide -->
+      <td></td>
       <td class="cours">Recherche opérationnelle (TD)</td>
     </tr>
   </table>
 </body>
 </html>
+
