--- a/edt.html
+++ b/edt.html
@@ -80,7 +80,7 @@
     <tr>
       <td>11h-13h</td>
       <td class="cours">Analyse de données</td>
-      <td class="cours">Processus stochastique</td>
+      <td class="cours">Anglais</td>
       <td class="cours">Programmation impérative</td>
       <td></td>
     </tr>
@@ -95,7 +95,7 @@
     <tr>
       <td>14h-16h</td>
       <td class="cours">Analyse de données</td>
-      <td></td>
+      <td rowspan="2" class="cours">Processus stochastique</td>
       <td class="cours">Méthodes de régression</td>
       <td class="cours">Recherche opérationnelle (cours)</td>
       <td rowspan="2" class="gestion">Gestion, Économie & Droit</td>
@@ -104,11 +104,11 @@
       <td>16h-18h</td>
       <td class="cours">Analyse de données</td>
       <td></td>
-      <td></td>
       <td class="cours">Recherche opérationnelle (TD)</td>
     </tr>
   </table>
 </body>
 </html>
+
 
 
