--- a/edt.html
+++ b/edt.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Emploi du temps</title>
+  <title>Emploi du temps - Reveal Week</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,22 +35,8 @@
       color: white;
       font-size: 14px;
     }
-    .cours {
+    .conference {
       background: #4caf50;
-      color: white;
-      font-weight: bold;
-      border-radius: 6px;
-      padding: 6px;
-    }
-    .integration {
-      background: #2196f3;
-      color: white;
-      font-weight: bold;
-      border-radius: 6px;
-      padding: 6px;
-    }
-    .gestion {
-      background: #9c27b0;
       color: white;
       font-weight: bold;
       border-radius: 6px;
@@ -59,7 +45,7 @@
   </style>
 </head>
 <body>
-  <header>ensIIE - Emploi du temps</header>
+  <header>ensIIE - Emploi du temps : Reveal Week</header>
   <table>
     <tr>
       <th>Heure</th>
@@ -71,18 +57,19 @@
     </tr>
     <tr>
       <td>09h-11h</td>
-      <td class="cours">Conférences</td>
-      <td class="cours">Processus stochastique</td>
-      <td rowspan="2" class="cours">Recherche opérationnelle</td>
-      <td></td>
-      <td></td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
     </tr>
     <tr>
       <td>11h-13h</td>
-      <td class="cours">Analyse de données</td>
-      <td class="cours">Anglais</td>
-      <td class="cours">Programmation impérative</td>
-      <td></td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
     </tr>
     <tr>
       <td>13h-14h</td>
@@ -94,21 +81,20 @@
     </tr>
     <tr>
       <td>14h-16h</td>
-      <td class="cours">Analyse de données</td>
-      <td rowspan="2" class="cours">Processus stochastique</td>
-      <td class="cours">Méthodes de régression</td>
-      <td class="cours">Recherche opérationnelle (cours)</td>
-      <td rowspan="2" class="gestion">Gestion, Économie & Droit</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
     </tr>
     <tr>
       <td>16h-18h</td>
-      <td class="cours">Analyse de données</td>
+      <td class="conference">Conférence Reveal Week</td>
       <td></td>
-      <td class="cours">Recherche opérationnelle (TD)</td>
+      <td></td>
+      <td class="conference">Conférence Reveal Week</td>
+      <td class="conference">Conférence Reveal Week</td>
     </tr>
   </table>
 </body>
 </html>
-
-
-
